# pokeapi

./: .ghci  .gitignore  ChangeLog.md  README.md  package.yaml  pokeapi.cabal  pokeapi.nix  shell.nix  stack.yaml
app/: Main.hs
src/PokeApi/: Common.hs  LocationArea.hs  Pokemon.hs  Resource.hs  Type.hs  Types.hs  Version.hs
src/PokeApi/LocationArea/: Types.hs
src/PokeApi/Pokemon/: Api.hs  Queries.hs  Types.hs
src/PokeApi/Resource/: Api.hs  Types.hs
src/PokeApi/Type/: Api.hs  Queries.hs  Types.hs
src/PokeApi/Version/: Types.hs
src/PokemonType/: Api.hs  Queries.hs  Types.hs
src/Type/: Api.hs  Queries.hs  Types.hs
